[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fm-saxml-converter"
version = "0.1.0"
description = "Convert FileMaker Pro Save As XML exports into structured Markdown / JSON documentation"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "python-slugify>=8.0",
    "typer>=0.12",
    "rich>=13.0",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
fm-saxml = "fm_saxml.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fm_saxml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
